Removed shared assembly attributes
The parent solution now contains a ProductAssemblyInfo.cs
file that contains the attributes common to all the
Azavea.Open.DAO.* assemblies.

--- a/Azavea.Open.DAO.SQLServer.csproj
+++ b/Azavea.Open.DAO.SQLServer.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\ProductAssemblyInfo.cs">
+      <Link>ProductAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="SQLServerDaLayer.cs" />
     <Compile Include="SQLServerDescriptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
