Updated project to link to shared assembly info in Azavea.Open.DAO

--- a/Azavea.Open.DAO.SQLServer.csproj
+++ b/Azavea.Open.DAO.SQLServer.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\ProductAssemblyInfo.cs">
+    <Compile Include="..\Azavea.Open.DAO\ProductAssemblyInfo.cs">
       <Link>ProductAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="SQLServerDaLayer.cs" />
