--- a/Tests/SqlServerDao.config
+++ b/Tests/SqlServerDao.config
@@ -2,7 +2,7 @@
 <components>
     <component name="DAO">
         <parameter name="DescriptorClass" value="Azavea.Open.DAO.SQLServer.SQLServerDescriptor,Azavea.Open.DAO.SQLServer"/>
-        <parameter name="SERVER" value="LR05" />
+        <parameter name="SERVER" value="LR05.internal.azavea.com" />
         <parameter name="DATABASE" value="unittest_misc" />
         <parameter name="USER" value="UNITTEST" />
         <parameter name="PASSWORD" value="unittest" />
